syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/auth";
package api.auth;

message GetLinkRequest {
	string state = 1;
}

message GetLinkResponse {
	string link = 1;
}

message PostCodeRequest {
	string code = 1;
}

message Dashboard {
	string id = 1;
}

message Profile {
	string id = 1;
	string avatar = 2;
	string login = 3;
	string display_name = 4;
	string api_key = 5;
	bool is_bot_admin = 6;
	string selected_dashboard_id = 7;
}
